k8s/connector/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connector-deployment
  labels:
    app: chat-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connector
  template:
    metadata:
      labels:
        app: connector
    spec:
      imagePullSecrets:
        - name: valhalla-cr
      containers:
        - name: connector
          image: cr.yggdrasill.dev/chat/connect:18
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
