k8s/connector/service.yml
apiVersion: v1
kind: Service
metadata:
  name: connector-service
spec:
  selector:
    app: connector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
