k8s/connector/httpproxy-websocket.yml
# httpproxy-websockets.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: chat
  namespace: default
spec:
  virtualhost:
    fqdn: chat.test.com
  routes:
  - conditions:
    - prefix: /ws
    enableWebsockets: true # Setting this to true enables websocket for all paths that match /websocket
    services:
    - name: connector-service
      port: 80
