k8s/connector/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connector-ingress
spec:
  rules:
    - host: "chat.test.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: connector-service
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: connector-service
                port:
                  number: 80
          - path: /webclient
            pathType: Prefix
            backend:
              service:
                name: webclient-service
                port:
                  number: 80
